mise ajour du pom et  du jenkinsfile